# anna-truman-director

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.json  executa.json  manifest.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release-binary.yml
bundle/: app.js  index.html  prompts.js  style.css  world.js  world.test.mjs
docs/: FRAMEWORK.md  MVP.md  TECHNICAL.md  binary-distribution.md  question.md
scripts/: package_binary.sh  set-tool-id.py
src/: _entry.py
src/truman_director/: __init__.py  engine.py  errors.py  plugin.py  prompts.yaml  scenarios.py  state.py  storage.py
tests/: conftest.py  test_decision.py  test_plugin_contract.py  test_plugin_recovery.py  test_reactor.py  test_scenarios.py  test_storage.py  test_world.py
