[project]
name = "tool-qingyu_ge-anna-truman-director-sxah66uc"
version = "0.1.1"
description = "Truman Director — Executa stdio tool plugin for the Truman Town Anna App"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "gqy20", email = "qingyu_ge@foxmail.com" }]
license = { text = "MIT" }
dependencies = [
    "executa-sdk>=0.1.0",
    "pyyaml>=6.0",
]

# PEP 735 dependency-groups (not [project.optional-dependencies]): uv sync
# installs the `dev` group by default, so `uv run pytest` / `uv run ruff` work
# without `--extra dev` — and don't silently fall back to a system Python that
# lacks executa_sdk.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
"tool-qingyu_ge-anna-truman-director-sxah66uc" = "truman_director.plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truman_director"]

# executa-sdk is a local path package (../anna-executa-examples/sdk/python),
# not on PyPI. Point uv at the checkout on disk.
[tool.uv.sources]
executa-sdk = { path = "../anna-executa-examples/sdk/python" }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"
